# aethr

./: .gitignore  .trigger-docs  404.html  CNAME  Cargo.toml  README.md  index.html  install-beta.sh  install.sh  mkdocs.yml  schema.sql  shell_hook.sh  sitemap.xml
.github/workflows/: deploy-docs.yml  release.yml
community/contributing/: index.html
community/roadmap/: index.html
data/: error_rules.yaml  seed_moat.json
docs/: index.md
docs/community/: contributing.md  roadmap.md
docs/getting-started/: installation.md  quick-start.md
docs/javascripts/: header-links.js
docs/operations/: faq.md  troubleshooting.md
docs/reference/: architecture.md  database.md
docs/stylesheets/: extra.css
docs/usage/: commands.md  features.md
getting-started/installation/: index.html
getting-started/quick-start/: index.html
javascripts/: header-links.js
operations/faq/: index.html
operations/troubleshooting/: index.html
overrides/: main.html
overrides/stylesheets/: extra.css
reference/architecture/: index.html
reference/database/: index.html
scripts/systemd/: aethr-daemon.service
search/: search_index.json
src/: community.rs  lib.rs  main.rs
src/commands/: daemon.rs  fix.rs  hook.rs  import.rs  init.rs  login.rs  mod.rs  predict.rs  recall.rs  seed_moat.rs  status.rs
src/context/: detector.rs  mod.rs
src/core/: fix.rs  mod.rs  predict.rs  recall.rs  rules.rs
src/daemon/: client.rs  mod.rs  server.rs
src/db/: community_brain.rs  local.rs  moat.rs  mod.rs  schema.rs
src/llm/: claude.rs  mod.rs
src/ui/: menu.rs  (+5 more)
stylesheets/: extra.css
(+13 files in other folders)
