[package]
name = "aethr"
version = "1.0.0-beta"
edition = "2021"
description = "Terminal Intelligence That Learns - semantic recall and error fixing"
license = "MIT"
repository = "https://github.com/aethrAI/aethr"
homepage = "https://aethr-ai.dev"
readme = "README.md"
keywords = ["cli", "terminal", "shell", "history", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "aethr"
path = "src/main.rs"

[lib]
name = "aethr_core"
path = "src/lib.rs"

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# DB
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }

# filesystem and dirs
dirs = "5.0"

# TUI
crossterm = "0.26"
ratatui = "0.20"

# Async runtime (for daemon)
tokio = { version = "1.36", features = ["full"], optional = true }

# HTTP client + JSON
reqwest = { version = "0.11", features = ["json", "gzip", "stream", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Regex for pattern matching
regex = "1.10"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
colored = "2.1"
uuid = { version = "1.5", features = ["v4"] }

# Optional clients (commented or used later)
# redis = "0.23"
# qdrant-client = "0.10"

[features]
default = []
daemon = ["tokio"]